# Common-Lua

./: README.md
CommonLuaApp/: note.txt  settings.gradle
CommonLuaApp/app/: build.gradle
CommonLuaApp/app/src/main/: AndroidManifest.xml
CommonLuaApp/app/src/main/assets/: MyClass.lua
CommonLuaApp/app/src/main/assets/lua/: AndroidEnv.lua  AndroidR.lua  JavaCaller.lua  LuaTest.lua  Strings.lua  access_cpp_obj.lua  cjson_encode.lua  luaregistry_test.lua  skia_t1.lua  skia_ui1.lua
CommonLuaApp/app/src/main/res/layout/: ac_skia_study.xml  activity_main.xml
CommonLuaApp/app/src/main/res/raw/: bind.la  luafile.lua  my_class.lua
CommonLuaApp/backup/: dynamic_load_so.txt  lua.h_desc  lua_api.c
CommonLuaApp/gradle/wrapper/: gradle-wrapper.properties
CommonLuaApp/lua5.3/: CMakeLists.txt  build.gradle
CommonLuaApp/lua5.3/src/main/: AndroidManifest.xml
CommonLuaApp/lua5.3/src/main/cpp/: codes  note.txt
CommonLuaApp/lua5.3/src/main/cpp/cjson/: lua_cjson.c
CommonLuaApp/lua5.3/src/main/cpp/lua/: config.h  lapi.c  lauxlib.c  lbaselib.c  lgc.c  linit.c  llimits.h  loadlib.c  loslib.c  lstate.c  ltests.h  lua.h
CommonLuaApp/lua5.3/src/main/cpp/lua_test/: LuaTest.cpp  access_cpp_obj.cpp  test.cpp  test.h  test_depend.h
CommonLuaApp/lua5.3/src/main/cpp/luaext_java/: LuaFunc.cpp  LuaFunc.h  LuaJavaCaller.cpp  LuaJavaCaller.h  LuaState.cpp  LuaState.h  LuaTest.cpp  LuaWrapper.cpp  MethodInfo.h  class_info.cpp  class_info.h  class_wrapper.cpp  class_wrapper.h  java_env.cpp  java_env.h  lua2java.h  lua_java_convert.cpp  lua_java_convert.h
CommonLuaApp/lua5.3/src/main/cpp/luaextra/: LuaRegistry.cpp  LuaRegistry.h  blowfish.c  lua_bridge.cpp  lua_bridge.h  lua_extra.c  lua_extra.h  lua_internal.c  lua_internal.h  lua_lambda.h
CommonLuaApp/lua5.3/src/main/cpp/luaui/: SkLua.cpp  SkLua.h  SkLuaCanvas.cpp  SkLuaCanvas.h
CommonLuaApp/lua5.3/src/main/cpp/skia/include/core/: SkCanvas.h  SkRSXform.h  SkTypes.h
CommonLuaApp/lua5.3/src/main/cpp/skia/modules/skshaper/include/: SkShaper.cpp
CommonLuaApp/lua5.3/src/main/java/com/heaven7/java/lua/: ClassInfo.java  CppObject.java  CppObjectMember.java  INativeObject.java  JavaValuer.java  Lua2JavaValue.java  LuaCallback.java  LuaFunction.java  LuaFunctionProxy.java  LuaIgnore.java  LuaInitializer.java  LuaJavaCaller.java  LuaMethod.java  LuaParameter.java  LuaResult.java  LuaSearcher.java  LuaState.java  LuaTest.java  LuaTraveller.java  LuaTypeAdapter.java  LuaUtils.java  LuaValue.java  LuaWrapper.java  MethodInfo.java  TableObject.java  TypeConvertor.java
CommonLuaApp/lua5.3/src/main/java/com/heaven7/java/lua/adapter/: ArrayLuaTypeAdapter.java  BooleanLuaTypeAdapter.java  ByteLuaTypeAdapter.java  CharLuaTypeAdapter.java  CollectionLuaTypeAdapter.java  CollectionTraveller.java  DoubleLuaTypeAdapter.java  FloatLuaTypeAdapter.java  FunctionLuaTypeAdapter.java  IntLuaTypeAdapter.java  LightObjectLuaTypeAdapter.java  ListLuaTypeAdapter.java  LongLuaTypeAdapter.java  MapLuaTypeAdapter.java  NullWrappedTypeAdapter.java  NumberAdapterLua.java  ObjectLuaTypeAdapter.java  SetLuaTypeAdapter.java  ShortLuaTypeAdapter.java  StringLuaTypeAdapter.java
CommonLuaApp/lua5.3/src/main/java/com/heaven7/java/lua/anno/: LuaAdapter.java  LuaExpose.java  LuaField.java  LuaIgnore.java  LuaMethod.java
CommonLuaApp/lua5.3/src/main/java/com/heaven7/java/lua/convertors/: ArrayLuaTypeAdapter.java  ArrayTypeConvertor.java  BooleanConvertor.java  BooleanLuaTypeAdapter.java  ByteConvertor.java  ByteLuaTypeAdapter.java  CharConvertor.java  CharLuaTypeAdapter.java  CollectionLuaTypeAdapter.java  CollectionTypeConvertor.java  DoubleConvertor.java  DoubleLuaTypeAdapter.java  FloatConvertor.java  FloatLuaTypeAdapter.java  IntConvertor.java  IntLuaTypeAdapter.java  ListLuaTypeAdapter.java  ListTypeConvertor.java  LongConvertor.java  LongLuaTypeAdapter.java  Lua2JavaValueLuaTypeAdapter.java  MapLuaTypeAdapter.java  MapTypeConvertor.java  NonSimpleTypeConvertor.java  NumberAdapterLua.java  NumberConvertor.java  ObjectLuaTypeAdapter.java  ObjectTypeConvertor.java  SetLuaTypeAdapter.java  SetTypeConvertor.java  ShortConvertor.java  ShortLuaTypeAdapter.java  StringLuaTypeAdapter.java  StringTypeConvertor.java  TypeConvertorFactory.java
CommonLuaApp/lua5.3/src/main/java/com/heaven7/java/lua/internal/: $ReflectyTypes.java  CallJavaMethodFunction.java  ClassInfo.java  FieldInfo.java  IotaUtils.java  LuaReflectyContext.java  LuaTypeAdapterManager.java  LuaUtils.java  MethodInfo.java  Pools.java  SigUtils.java  TypeNode.java  TypeToken.java
CommonLuaApp/lua5.3/src/main/java/com/heaven7/java/lua/iota/: AbstractLuaTypeAdapterManager.java  BasicTypeAdapterProvider.java  CollectionIotaPlugin.java  GroupLuaReflectyContext.java  ILuaTypeAdapterManager.java  IotaPlugin.java  IotaPluginManager.java  ListIotaPlugin.java  LuaReflectyContext.java  LuaTypeAdapterManager.java  MapIotaPlugin.java  SetIotaPlugin.java  SimpleLuaReflectyContext.java  TypeNode.java  TypeToken.java  Wrapper.java
CommonLuaApp/lua5.3/src/main/java/com/heaven7/java/lua/iota/plugins/: SparseArrayIotaPlugin.java
CommonLuaApp/lua5.3/src/main/java/org/keplerproject/luajava/: LuaJavaAPI.java
CommonLuaApp/lua5.3/src/main/java/org/skia/viewer/: StateAdapter.java  ViewerActivity.java
CommonLuaApp/lua5.3/src/main/jni/: note.txt
CommonLuaApp/lua5.3/src/main/jni/common/: list.h  map2.h
CommonLuaApp/lua5.3/src/main/jni/lua/: lauxlib.c  lbaselib.c  linit.c  loadlib.c  lua.h  lualib.h
CommonLuaApp/lua5.3/src/main/jni/lua_test/: access_cpp_obj.cpp  access_cpp_obj.h  test.cpp  tests_all.h
CommonLuaApp/lua5.3/src/main/jni/luaext_java/: LuaJavaCaller.cpp  LuaJavaCaller.h  LuaState.cpp  LuaState.h  LuaTest.cpp  LuaWrapper.cpp  LuaWrapper.h  class_info.cpp  class_info.h  java_env.cpp  java_env.h
CommonLuaApp/lua5.3/src/main/jni/luaextra/: LuaRegistry.cpp  LuaRegistry.h  blowfish.c  blowfish.h  lua_bridge.h  lua_extra.c  lua_extra.h  lua_internal.c  lua_internal.h  test.cpp  test.h
CommonLuaApp/lua5.3/src/main/jni/luajava/: luajava.c  luajava.h
CommonLuaApp/lua5.3/src/main/res/values/: strings.xml
(+27 files in other folders)
